--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@mui/system": "^6.4.3",
     "@mui/x-date-pickers": "^7.23.6",
     "@types/lodash": "^4.17.14",
+    "@vercel/analytics": "^1.5.0",
     "@wojtekmaj/react-daterange-picker": "^6.0.0",
     "axios": "^1.7.9",
     "bootstrap": "^5.3.3",
@@ -57,6 +58,7 @@
     "stripe": "^17.6.0",
     "swiper": "^11.2.1",
     "universal-cookie": "^7.2.2",
+    "vercel": "^41.1.4",
     "yup": "^1.6.1"
   },
   "devDependencies": {
