--- a/package.json
+++ b/package.json
@@ -34,12 +34,14 @@
     "emoji-picker-react": "^4.12.0",
     "formik": "^2.4.6",
     "gsap": "^3.12.5",
+    "i18next": "^24.2.2",
     "lodash": "^4.17.21",
     "material-ui-confirm": "^3.0.16",
     "moment": "^2.30.1",
     "mui-one-time-password-input": "^3.0.2",
     "mui-tel-input": "^7.0.0",
     "next": "15.1.6",
+    "next-i18next": "^15.4.2",
     "next-intl": "^3.26.3",
     "next-video": "^2.0.4",
     "nextjs-toploader": "^3.7.15",
@@ -49,6 +51,7 @@
     "react-dom": "^19.0.0",
     "react-drag-drop-files": "^2.4.0",
     "react-hook-form": "^7.54.2",
+    "react-i18next": "^15.4.1",
     "react-icons": "^5.4.0",
     "react-infinite-scroll-component": "^6.1.0",
     "react-quill": "^2.0.0",
