--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@mui/material-nextjs": "^6.3.0",
     "@mui/system": "^6.4.3",
     "@mui/x-date-pickers": "^7.23.6",
+    "@supabase/supabase-js": "^2.48.1",
     "@types/lodash": "^4.17.14",
     "@vercel/analytics": "^1.5.0",
     "@wojtekmaj/react-daterange-picker": "^6.0.0",
