--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "@mui/material-nextjs": "^6.3.0",
     "@mui/system": "^6.4.3",
     "@mui/x-date-pickers": "^7.23.6",
+    "@stripe/react-stripe-js": "^3.1.1",
+    "@stripe/stripe-js": "^5.7.0",
     "@supabase/supabase-js": "^2.48.1",
     "@types/lodash": "^4.17.14",
     "@vercel/analytics": "^1.5.0",
@@ -48,6 +50,7 @@
     "nextjs-toploader": "^3.7.15",
     "notistack": "^3.0.1",
     "openai": "^4.85.1",
+    "pdf-lib": "^1.17.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-drag-drop-files": "^2.4.0",
@@ -56,6 +59,7 @@
     "react-icons": "^5.4.0",
     "react-infinite-scroll-component": "^6.1.0",
     "react-quill": "^2.0.0",
+    "react-signature-canvas": "^1.1.0-alpha.1",
     "resend": "^4.1.2",
     "sass": "^1.83.0",
     "slugify": "^1.6.6",
