--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@supabase/supabase-js": "^2.48.1",
     "@types/lodash": "^4.17.14",
     "@vercel/analytics": "^1.5.0",
+    "@vercel/speed-insights": "^1.2.0",
     "@wojtekmaj/react-daterange-picker": "^6.0.0",
     "axios": "^1.7.9",
     "bootstrap": "^5.3.3",
