--- a/package.json
+++ b/package.json
@@ -24,6 +24,11 @@
     "@mui/material-nextjs": "^6.3.0",
     "@mui/system": "^6.4.3",
     "@mui/x-date-pickers": "^7.23.6",
+    "@radix-ui/react-dialog": "^1.1.6",
+    "@radix-ui/react-label": "^2.1.2",
+    "@radix-ui/react-select": "^2.1.6",
+    "@radix-ui/react-slot": "^1.1.2",
+    "@radix-ui/react-tooltip": "^1.1.8",
     "@stripe/react-stripe-js": "^3.1.1",
     "@stripe/stripe-js": "^5.7.0",
     "@supabase/supabase-js": "^2.48.1",
@@ -33,6 +38,8 @@
     "@wojtekmaj/react-daterange-picker": "^6.0.0",
     "axios": "^1.7.9",
     "bootstrap": "^5.3.3",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
     "dayjs": "^1.11.13",
     "emailjs-com": "^3.2.0",
     "emoji-picker-react": "^4.12.0",
@@ -40,6 +47,7 @@
     "gsap": "^3.12.5",
     "i18next": "^24.2.2",
     "lodash": "^4.17.21",
+    "lucide-react": "^0.477.0",
     "material-ui-confirm": "^3.0.16",
     "moment": "^2.30.1",
     "mui-one-time-password-input": "^3.0.2",
@@ -66,6 +74,7 @@
     "slugify": "^1.6.6",
     "stripe": "^17.6.0",
     "swiper": "^11.2.1",
+    "tailwind-merge": "^3.0.2",
     "universal-cookie": "^7.2.2",
     "vercel": "^41.1.4",
     "yup": "^1.6.1"
