--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "dayjs": "^1.11.13",
     "emailjs-com": "^3.2.0",
     "emoji-picker-react": "^4.12.0",
+    "file-saver": "^2.0.5",
     "formik": "^2.4.6",
     "gsap": "^3.12.5",
     "i18next": "^24.2.2",
